2002-06-03  Darin Adler  <darin@apple.com>

	Forgot one file.

	* kwq/qt/qframe.h: Added.

2002-06-03  Darin Adler  <darin@apple.com>

	Get rid of many unneeded APPLE_CHANGES.
	Also get rid of _KWQ_ and _KWQ_PEDANTIC_.

	* WebCore.exp: Don't export DomShared::ref/deref any more.
	* WebCore-tests.exp: Changed around as needed due to changes in
	the classes being tested.

	* khtml/html/htmlparser.cpp:
	* khtml/html/htmltokenizer.cpp:
	Simplified APPLE_CHANGES for better merging.

	* khtml/dom/dom_misc.h:
	* khtml/dom/dom_misc.cpp:
	* khtml/dom/html_document.cpp:
	* khtml/khtmlview.cpp:
	* khtml/ecma/kjs_css.h:
	* khtml/ecma/kjs_dom.cpp:
	* khtml/ecma/kjs_dom.h:
	* khtml/ecma/kjs_window.cpp:
	* khtml/html/html_formimpl.cpp:
	* khtml/html/html_objectimpl.cpp:
	* khtml/misc/helper.cpp:
	* khtml/rendering/bidi.cpp:
	* khtml/rendering/render_flow.cpp:
	* khtml/rendering/render_form.cpp:
	* khtml/rendering/render_text.cpp:
	* khtml/xml/xml_tokenizer.h:
	* kwq/qt/qtextedit.h:
	Remove now-unneeded APPLE_CHANGES.

	* khtml/misc/loader.cpp: (CachedImage::pixmap): Turned off more of
	the QMovie code.

	* khtml/html/html_documentimpl.cpp:
	* khtml/html/htmltokenizer.h:
	* khtml/xml/dom_elementimpl.h:
	* kwq/KWQKHTMLPart.mm:
	Formatting and other minor tweaks.

	* kwq/KWQApplication.mm: (QApplication::sendEvent): Implemented.
	* kwq/KWQChar.mm: (QChar::direction): Improved implementation.

	* kwq/KWQCollection.h: Removed.
	* kwq/KWQIcon.h: Removed.

	* kwq/Makefile.am: Removed following files.
	* kwq/KWQKCompletionBox.mm: Removed.
	* kwq/KWQKFactory.mm: Removed.
	* kwq/KWQListBox.mm: Removed.
	* kwq/KWQKImageIO.mm: Removed.

	* kwq/KWQObject.mm: (QObject::event): Added, does nothing.
	(QObject::inherits): Put in real implementation (good enough for us).

	* kwq/WCWebDataSource.h: Removed extern declaration of global.

	* kwq/KWQCursor.mm: (QCursor::handle): Made the handle be an
	NSCursor *.

	* kwq/external.h: Moved [IFWebView setFrameSize:] here.
	Got rid of IFAnimatedImage.
